@@ -107,6 +107,7 @@ PROJ_HEAD(putp5p, "Putnins P5'")
 PROJ_HEAD(putp6, "Putnins P6")
 PROJ_HEAD(putp6p, "Putnins P6'")
 PROJ_HEAD(qua_aut, "Quartic Authalic")
+PROJ_HEAD(qsc, "Quadrilateralized Spherical Cube")
 PROJ_HEAD(robin, "Robinson")
 PROJ_HEAD(rouss, "Roussilhe Stereographic")
 PROJ_HEAD(rpoly, "Rectangular Polyconic")
